--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Example - textarea-caret-position</title>
+    <title>Basic Example - textarea-caret-typescript</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
